# plantarea

./: .gitignore  API_CONTRACT.md  INSTALL.md  README.md  RETROSPECTIVE.md  SPRINT.md  SPRINT_REVIEW_1.md  install.sh  setup.sh
.github/workflows/: deploy.yml
backend/: config.yaml  pyproject.toml
backend/src/plantarea/: __init__.py  main.py
backend/src/plantarea/api/: __init__.py  admin.py  categories.py  nurseries.py  orders.py  products.py
backend/src/plantarea/config/: settings.py
backend/src/plantarea/models/: __init__.py  database.py
backend/src/plantarea/schemas/: __init__.py  api.py
backend/src/plantarea/seed/: data.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AdminLayout.tsx  Footer.tsx  Header.tsx  StorefrontLayout.tsx  ViveroLayout.tsx
frontend/src/components/storefront/: CategoryFilter.tsx  NurseryCard.tsx  ProductCard.tsx
frontend/src/hooks/: useCart.ts  useCategories.ts  useNurseries.ts  useOrders.ts  useProducts.ts
frontend/src/lib/: api.real.ts  api.ts  mock-api.ts  mock-data.ts
frontend/src/pages/admin/: Dashboard.tsx  Moderation.tsx  Nurseries.tsx
frontend/src/pages/storefront/: Cart.tsx  Catalog.tsx  Home.tsx  NurseriesList.tsx  NurseryProfile.tsx  ProductDetail.tsx
frontend/src/pages/vivero/: Dashboard.tsx  Orders.tsx  Products.tsx  (+1 more)
frontend/src/types/: index.ts
specs/: ESTRATEGIA-primeros-clientes.md  PENDIENTE-retencion-desintermediacion.md  PLAN-plantarea-implementacion.md  PRD-plantarea.md
